--- a/package.json
+++ b/package.json
@@ -77,12 +77,15 @@
     "ember-tether": "^1.0.0",
     "ember-tooltips": "3.4.2",
     "ember-websockets": "7.2.0",
+    "eslint-config-prettier": "^6.10.0",
     "eslint-plugin-node": "^11.0.0",
+    "eslint-plugin-prettier": "^3.1.2",
     "glob": "^7.1.2",
     "loader.js": "^4.7.0",
     "mocha": "^3.4.2",
     "mock-socket": "^6.1.0",
     "pretender": "1.4.2",
+    "prettier": "^1.19.1",
     "qunit-dom": "^1.0.0",
     "sass": "^1.25.0",
     "supertest": "^4.0.2",
