--- a/package.json
+++ b/package.json
@@ -78,6 +78,7 @@
     "ember-tooltips": "3.4.2",
     "ember-websockets": "7.2.0",
     "eslint-config-prettier": "^6.10.0",
+    "eslint-plugin-ember": "^7.8.1",
     "eslint-plugin-node": "^11.0.0",
     "eslint-plugin-prettier": "^3.1.2",
     "glob": "^7.1.2",
