--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
   "dependencies": {
     "archiver": "^1.3.0",
     "async": "2.4.1",
-    "asyncjs": "https://github.com/mnutt/async.js.git#28ddb08",
+    "asyncjs": "0.0.13",
     "cache-require-paths": "0.3.0",
     "chai": "^4.0.2",
     "child-process-promise": "^2.2.1",
@@ -31,7 +31,7 @@
     "fs-promise": "^2.0.3",
     "image-size": "^0.8.3",
     "imagemagick-stream": "^4.1.1",
-    "jsDAV": "https://github.com/mnutt/jsDAV.git#0556df11183",
+    "jsDAV": "https://github.com/mnutt/jsDAV.git#4c4fc37",
     "mkdirp": "1.0.3",
     "morgan": "^1.9.1",
     "multiparty": "4.2.1",
