--- a/package.json
+++ b/package.json
@@ -28,13 +28,15 @@
     "concat-files": "^0.1.1",
     "dirStat": "0.0.2",
     "express": "^4.17.1",
+    "fs-extra": "^8.1.0",
     "fs-promise": "^2.0.3",
     "image-size": "^0.8.3",
     "imagemagick-stream": "^4.1.1",
     "jsDAV": "https://github.com/mnutt/jsDAV.git#4c4fc37",
-    "mkdirp": "1.0.3",
+    "mkdirp": "^1.0.3",
     "morgan": "^1.9.1",
     "multiparty": "4.2.1",
+    "sharp": "^0.24.1",
     "walker": "^1.0.7",
     "ws": "^7.2.1"
   },
