--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "ember-cli-showdown": "^4.4.4",
     "ember-cli-sri": "^2.1.1",
     "ember-cli-template-lint": "^1.0.0-beta.3",
+    "ember-cli-uglify": "^3.0.0",
     "ember-cli-update": "^0.52.1",
     "ember-cli-vagrant-spk": "https://github.com/mnutt/ember-cli-vagrant-spk.git#e53e15b78a9299",
     "ember-concurrency": "0.10.1",
