--- a/.sandstorm/Vagrantfile
+++ b/.sandstorm/Vagrantfile
@@ -21,7 +21,8 @@ end
 Vagrant.configure(VAGRANTFILE_API_VERSION) do |config|
   # Base on the Sandstorm snapshots of the official Debian 9 (stretch) box with vboxsf support.
   config.vm.box = "debian/contrib-stretch64"
-  config.vm.box_version = "9.3.0"
+  config.vm.post_up_message = "Your virtual server is running at http://local.sandstorm.io:6090."
+
 
   if Vagrant.has_plugin?("vagrant-vbguest") then
     # vagrant-vbguest is a Vagrant plugin that upgrades
