--- a/package.json
+++ b/package.json
@@ -36,17 +36,19 @@
     "mkdirp": "^1.0.3",
     "morgan": "^1.9.1",
     "multiparty": "4.2.1",
-    "sharp": "^0.24.1",
+    "sharp": "^0.25.4",
     "walker": "^1.0.7",
     "ws": "^7.2.1"
   },
   "devDependencies": {
     "@ember/optional-features": "^1.3.0",
+    "@fullhuman/postcss-purgecss": "^2.1.0",
     "@glimmer/component": "^1.0.0",
     "@glimmer/tracking": "^1.0.0",
     "babel-eslint": "^10.0.3",
     "broccoli-asset-rev": "^3.0.0",
     "ember-auto-import": "^1.5.3",
+    "ember-basic-dropdown": "^3.0.7",
     "ember-cli": "^3.16.0",
     "ember-cli-app-version": "^3.2.0",
     "ember-cli-babel": "^7.17.2",
@@ -57,8 +59,8 @@
     "ember-cli-htmlbars": "^4.2.2",
     "ember-cli-inject-live-reload": "^2.0.2",
     "ember-cli-moment-shim": "^3.7.1",
+    "ember-cli-postcss": "^5.0.0",
     "ember-cli-pretender": "^3.2.0",
-    "ember-cli-sass": "^10.0.1",
     "ember-cli-showdown": "^4.4.4",
     "ember-cli-sri": "^2.1.1",
     "ember-cli-template-lint": "^1.0.0-beta.3",
@@ -89,10 +91,12 @@
     "loader.js": "^4.7.0",
     "mocha": "^3.4.2",
     "mock-socket": "^6.1.0",
+    "postcss-import": "^12.0.1",
     "prettier": "^1.19.1",
     "qunit-dom": "^1.0.0",
     "sass": "^1.25.0",
     "supertest": "^4.0.2",
+    "tailwindcss": "^1.2.0",
     "xmldoc": "^1.1.0"
   },
   "engines": {
