--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
   },
   "scripts": {
     "build": "ember build --environment=production",
+    "lint": "npm-run-all --aggregate-output --continue-on-error --parallel lint:*",
     "lint:hbs": "ember-template-lint .",
     "start": "node_modules/.bin/ember server",
-    "test": "ember test",
+    "test": "npm-run-all lint:* test:*",
+    "test:ember": "ember test",
     "test-server": "node_modules/.bin/mocha server/tests/*.js"
   },
   "dependencies": {
@@ -42,62 +44,61 @@
   },
   "devDependencies": {
     "@ember/optional-features": "^1.3.0",
-    "@fullhuman/postcss-purgecss": "^2.1.0",
-    "@glimmer/component": "^1.0.0",
-    "@glimmer/tracking": "^1.0.0",
-    "babel-eslint": "^10.0.3",
+    "@ember/render-modifiers": "^1.0.2",
+    "@fullhuman/postcss-purgecss": "^2.3.0",
+    "@glimmer/component": "^1.0.1",
+    "@glimmer/tracking": "^1.0.1",
+    "babel-eslint": "^10.1.0",
     "broccoli-asset-rev": "^3.0.0",
-    "ember-auto-import": "^1.5.3",
-    "ember-basic-dropdown": "^3.0.7",
-    "ember-cli": "^3.16.0",
+    "ember-auto-import": "^1.6.0",
+    "ember-basic-dropdown": "https://github.com/cibernox/ember-basic-dropdown.git#e8a18fc28f",
+    "ember-cli": "^3.20.0",
     "ember-cli-app-version": "^3.2.0",
-    "ember-cli-babel": "^7.17.2",
+    "ember-cli-babel": "^7.21.0",
     "ember-cli-content-security-policy": "^1.1.1",
     "ember-cli-dependency-checker": "^3.2.0",
     "ember-cli-deprecation-workflow": "^1.0.1",
-    "ember-cli-eslint": "^5.1.0",
-    "ember-cli-htmlbars": "^4.2.2",
+    "ember-cli-htmlbars": "^5.2.0",
     "ember-cli-inject-live-reload": "^2.0.2",
-    "ember-cli-moment-shim": "^3.7.1",
-    "ember-cli-postcss": "^5.0.0",
+    "ember-cli-moment-shim": "^3.8.0",
+    "ember-cli-postcss": "^6.0.1",
     "ember-cli-pretender": "^3.2.0",
-    "ember-cli-showdown": "^4.4.4",
+    "ember-cli-showdown": "^4.5.0",
     "ember-cli-sri": "^2.1.1",
-    "ember-cli-template-lint": "^1.0.0-beta.3",
     "ember-cli-uglify": "^3.0.0",
-    "ember-cli-update": "^0.52.1",
+    "ember-cli-update": "^0.54.6",
     "ember-cli-vagrant-spk": "https://github.com/mnutt/ember-cli-vagrant-spk.git#e53e15b78a9299",
-    "ember-concurrency": "0.10.1",
+    "ember-concurrency": "^1.2.1",
     "ember-export-application-global": "^2.0.1",
-    "ember-fetch": "^7.0.0",
-    "ember-file-upload": "^2.7.1",
+    "ember-fetch": "^8.0.1",
+    "ember-file-upload": "^3.0.5",
     "ember-load-initializers": "^2.1.1",
     "ember-maybe-import-regenerator": "^0.1.6",
     "ember-moment": "^8.0.0",
-    "ember-paper": "1.0.0-beta.28",
     "ember-photoswipe": "^0.6.0",
     "ember-qunit": "^4.6.0",
-    "ember-resolver": "^7.0.0",
+    "ember-resolver": "^8.0.0",
     "ember-route-action-helper": "^2.0.8",
-    "ember-source": "^3.16.0",
-    "ember-tether": "^1.0.0",
-    "ember-tooltips": "3.4.2",
+    "ember-source": "^3.20.2",
+    "ember-template-lint": "^2.10.0",
+    "ember-tooltips": "3.4.3",
     "ember-websockets": "7.2.0",
-    "eslint-config-prettier": "^6.10.0",
-    "eslint-plugin-ember": "^7.8.1",
-    "eslint-plugin-node": "^11.0.0",
-    "eslint-plugin-prettier": "^3.1.2",
-    "glob": "^7.1.2",
+    "eslint": "^7.5.0",
+    "eslint-config-prettier": "^6.11.0",
+    "eslint-plugin-ember": "^8.9.2",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-prettier": "^3.1.4",
+    "glob": "^7.1.6",
     "loader.js": "^4.7.0",
     "mocha": "^3.4.2",
-    "mock-socket": "^6.1.0",
+    "npm-run-all": "^4.1.5",
     "postcss-import": "^12.0.1",
     "prettier": "^1.19.1",
-    "qunit-dom": "^1.0.0",
-    "sass": "^1.25.0",
+    "qunit-dom": "^1.2.0",
+    "sass": "^1.26.10",
     "supertest": "^4.0.2",
-    "tailwindcss": "^1.2.0",
-    "xmldoc": "^1.1.0"
+    "tailwindcss": "^1.6.2",
+    "xmldoc": "^1.1.2"
   },
   "engines": {
     "node": "10.* || >= 12"
