--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "ember-cli-update": "^0.54.6",
     "ember-cli-vagrant-spk": "https://github.com/mnutt/ember-cli-vagrant-spk.git#e53e15b78a9299",
     "ember-concurrency": "^1.2.1",
+    "ember-concurrency-decorators": "^2.0.1",
     "ember-export-application-global": "^2.0.1",
     "ember-fetch": "^8.0.1",
     "ember-file-upload": "^3.0.5",
@@ -92,6 +93,7 @@
     "mocha": "^3.4.2",
     "npm-run-all": "^4.1.5",
     "postcss-import": "^12.0.1",
+    "pretender": "^3.4.3",
     "prettier": "^1.19.1",
     "qunit-dom": "^1.2.0",
     "sass": "^1.26.10",
