--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
   "dependencies": {
     "archiver": "^1.3.0",
     "async": "2.4.1",
-    "asyncjs": "0.0.13",
+    "asyncjs": "https://github.com/mnutt/async.js.git#ad52b32",
     "cache-require-paths": "0.3.0",
     "chai": "^4.0.2",
     "child-process-promise": "^2.2.1",
@@ -34,7 +34,7 @@
     "fs-promise": "^2.0.3",
     "image-size": "^0.8.3",
     "imagemagick-stream": "^4.1.1",
-    "jsDAV": "https://github.com/mnutt/jsDAV.git#4c4fc37",
+    "jsDAV": "https://github.com/mnutt/jsDAV.git#af31b2a",
     "mkdirp": "^1.0.3",
     "morgan": "^1.9.1",
     "multiparty": "4.2.1",
@@ -91,6 +91,7 @@
     "glob": "^7.1.6",
     "loader.js": "^4.7.0",
     "mocha": "^3.4.2",
+    "node-loader": "^1.0.2",
     "npm-run-all": "^4.1.5",
     "postcss-import": "^12.0.1",
     "pretender": "^3.4.3",
@@ -99,6 +100,7 @@
     "sass": "^1.26.10",
     "supertest": "^4.0.2",
     "tailwindcss": "^1.6.2",
+    "webpack-cli": "^4.2.0",
     "xmldoc": "^1.1.2"
   },
   "engines": {
