--- a/package.json
+++ b/package.json
@@ -13,11 +13,14 @@
   "scripts": {
     "build": "ember build --environment=production",
     "build-server": "webpack -c webpack.config.js",
-    "lint": "npm-run-all --aggregate-output --continue-on-error --parallel lint:*",
+    "lint": "npm-run-all --aggregate-output --continue-on-error --parallel \"lint:!(fix)\"",
+    "lint:fix": "npm-run-all --aggregate-output --continue-on-error --parallel lint:*:fix",
     "lint:hbs": "ember-template-lint .",
-    "lint:js": "eslint .",
+    "lint:hbs:fix": "ember-template-lint . --fix",
+    "lint:js": "eslint . --cache",
+    "lint:js:fix": "eslint . --fix",
     "start": "node_modules/.bin/ember server",
-    "test": "npm-run-all lint:* test:*",
+    "test": "npm-run-all lint test:*",
     "test:ember": "ember test",
     "test-server": "node_modules/.bin/mocha server/tests/*.js"
   },
@@ -45,64 +48,65 @@
     "ws": "^7.2.1"
   },
   "devDependencies": {
-    "@ember/optional-features": "^1.3.0",
+    "@ember/optional-features": "^2.0.0",
     "@ember/render-modifiers": "^1.0.2",
-    "@fullhuman/postcss-purgecss": "^2.3.0",
-    "@glimmer/component": "^1.0.1",
-    "@glimmer/tracking": "^1.0.1",
+    "@ember/test-helpers": "^2.4.0",
+    "@fullhuman/postcss-purgecss": "^4.0.3",
+    "@glimmer/component": "^1.0.4",
+    "@glimmer/tracking": "^1.0.4",
     "babel-eslint": "^10.1.0",
     "broccoli-asset-rev": "^3.0.0",
-    "ember-auto-import": "^1.6.0",
-    "ember-basic-dropdown": "https://github.com/cibernox/ember-basic-dropdown.git#e8a18fc28f",
-    "ember-cli": "^3.20.0",
-    "ember-cli-app-version": "^3.2.0",
-    "ember-cli-babel": "^7.21.0",
+    "date-fns": "^2.23.0",
+    "ember-auto-import": "^1.11.3",
+    "ember-basic-dropdown": "^3.0.19",
+    "ember-cli": "^3.27.0",
+    "ember-cli-app-version": "^5.0.0",
+    "ember-cli-babel": "^7.26.6",
     "ember-cli-content-security-policy": "^1.1.1",
     "ember-cli-dependency-checker": "^3.2.0",
     "ember-cli-deprecation-workflow": "^1.0.1",
-    "ember-cli-htmlbars": "^5.2.0",
+    "ember-cli-htmlbars": "^5.7.1",
     "ember-cli-inject-live-reload": "^2.0.2",
-    "ember-cli-moment-shim": "^3.8.0",
-    "ember-cli-postcss": "^6.0.1",
-    "ember-cli-showdown": "^4.5.0",
+    "ember-cli-postcss": "^7.0.2",
     "ember-cli-sri": "^2.1.1",
-    "ember-cli-uglify": "^3.0.0",
+    "ember-cli-terser": "^4.0.2",
     "ember-cli-update": "^0.54.6",
     "ember-cli-vagrant-spk": "https://github.com/mnutt/ember-cli-vagrant-spk.git#e53e15b78a9299",
-    "ember-concurrency": "^1.2.1",
-    "ember-concurrency-decorators": "^2.0.1",
+    "ember-concurrency": "^2.1.2",
+    "ember-concurrency-decorators": "^2.0.3",
     "ember-export-application-global": "^2.0.1",
-    "ember-fetch": "^8.0.1",
-    "ember-file-upload": "^3.0.5",
-    "ember-load-initializers": "^2.1.1",
-    "ember-maybe-import-regenerator": "^0.1.6",
-    "ember-moment": "^8.0.0",
+    "ember-fetch": "^8.1.1",
+    "ember-file-upload": "^4.0.0",
+    "ember-load-initializers": "^2.1.2",
+    "ember-page-title": "^6.2.2",
     "ember-photoswipe": "^0.6.0",
-    "ember-qunit": "^4.6.0",
-    "ember-resolver": "^8.0.0",
-    "ember-route-action-helper": "^2.0.8",
-    "ember-source": "^3.20.2",
-    "ember-template-lint": "^2.10.0",
-    "ember-tooltips": "3.4.3",
-    "ember-websockets": "7.2.0",
-    "eslint": "^7.5.0",
-    "eslint-config-prettier": "^6.11.0",
-    "eslint-plugin-ember": "^8.9.2",
+    "ember-qunit": "^5.1.4",
+    "ember-resolver": "^8.0.2",
+    "ember-showdown": "^1.0.0-beta.1",
+    "ember-source": "^3.27.2",
+    "ember-template-lint": "^3.5.1",
+    "ember-tooltips": "^3.4.7",
+    "ember-websockets": "^8.0.0",
+    "eslint": "^7.27.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-ember": "^10.4.2",
     "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-prettier": "^3.1.4",
-    "glob": "^7.1.6",
+    "eslint-plugin-prettier": "^3.4.0",
+    "eslint-plugin-qunit": "^6.1.1",
+    "glob": "^7.1.7",
     "loader.js": "^4.7.0",
     "mocha": "^3.4.2",
     "node-loader": "^1.0.2",
     "npm-run-all": "^4.1.5",
-    "postcss-import": "^12.0.1",
-    "pretender": "^3.4.3",
-    "prettier": "^1.19.1",
-    "qunit-dom": "^1.2.0",
-    "sass": "^1.26.10",
-    "supertest": "^4.0.2",
-    "tailwindcss": "^1.6.2",
-    "webpack-cli": "^4.2.0",
+    "postcss-import": "^14.0.2",
+    "pretender": "^3.4.7",
+    "prettier": "^2.3.0",
+    "qunit": "^2.15.0",
+    "qunit-dom": "^1.6.0",
+    "sass": "^1.37.5",
+    "supertest": "^6.1.5",
+    "tailwindcss": "^2.2.7",
+    "webpack-cli": "^4.7.2",
     "xmldoc": "^1.1.2"
   },
   "engines": {
