--- a/package.json
+++ b/package.json
@@ -26,8 +26,8 @@
     "test-server": "node_modules/.bin/mocha server/tests/*.js"
   },
   "dependencies": {
-    "archiver": "^1.3.0",
-    "async": "2.4.1",
+    "archiver": "^5.3.0",
+    "async": "^3.2.1",
     "asyncjs": "https://github.com/mnutt/async.js.git#ad52b32",
     "cache-require-paths": "0.3.0",
     "chai": "^4.0.2",
@@ -36,17 +36,17 @@
     "concat-files": "^0.1.1",
     "dirStat": "0.0.2",
     "express": "^4.17.1",
-    "fs-extra": "^8.1.0",
+    "fs-extra": "^10.0.0",
     "fs-promise": "^2.0.3",
-    "image-size": "^0.8.3",
+    "image-size": "^1.0.0",
     "imagemagick-stream": "^4.1.1",
     "jsDAV": "https://github.com/mnutt/jsDAV.git#ecdb458",
-    "mkdirp": "^1.0.3",
-    "morgan": "^1.9.1",
-    "multiparty": "4.2.1",
+    "mkdirp": "^1.0.4",
+    "morgan": "^1.10.0",
+    "multiparty": "^4.2.2",
     "sharp": "^0.28.3",
     "walker": "^1.0.7",
-    "ws": "^7.2.1"
+    "ws": "^8.1.0"
   },
   "devDependencies": {
     "@ember/optional-features": "^2.0.0",
