--- a/package.json
+++ b/package.json
@@ -79,7 +79,7 @@
     "ember-file-upload": "^4.0.0",
     "ember-load-initializers": "^2.1.2",
     "ember-page-title": "^6.2.2",
-    "ember-photoswipe": "^0.6.0",
+    "ember-photoswipe": "https://github.com/mnutt/ember-photoswipe.git#610afe8",
     "ember-qunit": "^5.1.4",
     "ember-resolver": "^8.0.2",
     "ember-showdown": "^1.0.0-beta.1",
