--- a/package.json
+++ b/package.json
@@ -105,7 +105,8 @@
     "qunit-dom": "^1.6.0",
     "supertest": "^6.1.5",
     "tailwindcss": "^2.2.7",
-    "webpack-cli": "^4.7.2",
+    "webpack": "^5.51.1",
+    "webpack-cli": "^4.8.0",
     "xmldoc": "^1.1.2"
   },
   "engines": {
