--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "compression": "^1.7.4",
     "concat-files": "^0.1.1",
     "dirStat": "0.0.2",
+    "duplexify": "^3.7.1",
     "express": "^4.17.1",
     "fs-extra": "^10.0.0",
     "fs-promise": "^2.0.3",
