--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
     "fs-promise": "^2.0.3",
     "image-size": "^1.0.0",
     "imagemagick-stream": "^4.1.1",
-    "jsDAV": "https://github.com/mnutt/jsDAV.git#0dd810e",
+    "jsDAV": "https://github.com/mnutt/jsDAV.git#ab8bee3",
     "mkdirp": "^1.0.4",
     "morgan": "^1.10.0",
     "multiparty": "^4.2.2",
@@ -56,6 +56,7 @@
     "@fullhuman/postcss-purgecss": "^4.0.3",
     "@glimmer/component": "^1.0.4",
     "@glimmer/tracking": "^1.0.4",
+    "@tailwindcss/forms": "^0.3.3",
     "babel-eslint": "^10.1.0",
     "broccoli-asset-rev": "^3.0.0",
     "date-fns": "^2.23.0",
@@ -106,6 +107,7 @@
     "qunit-dom": "^1.6.0",
     "supertest": "^6.1.5",
     "tailwindcss": "^2.2.7",
+    "tracked-built-ins": "^1.1.1",
     "webpack": "^5.51.1",
     "webpack-cli": "^4.8.0",
     "xmldoc": "^1.1.2"
