--- a/package.json
+++ b/package.json
@@ -79,6 +79,7 @@
     "ember-export-application-global": "^2.0.1",
     "ember-fetch": "^8.1.1",
     "ember-file-upload": "^4.0.0",
+    "ember-href-to": "^4.1.0",
     "ember-load-initializers": "^2.1.2",
     "ember-page-title": "^6.2.2",
     "ember-photoswipe": "https://github.com/mnutt/ember-photoswipe.git#610afe8",
